--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Awesome Presentation</title> <!-- You'll want to change that obviously-->
+    <title>Testing Liminal Presentation</title> <!-- You'll want to change that obviously-->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="./stylesheets/katex.min.css">
     <link rel="stylesheet" href="./stylesheets/liminal.css">
@@ -124,16 +124,16 @@
 
 class: center, middle
 <br/><br/><br/><br/>
-.title[My Awesome Presentation]
+.title[Test Presentation]
 .subtitle[A theme for scientific presentations using Remark.js]
 <br/><br/>
-.author[Jonathan Lilly]
-.institution[The Planetary Science Institute, Tucson, Arizona]
+.author[X. Chen]
+.institution[CIRES, Boulder CO]
 <br/><br/>
 .coauthor[Sherlock S. Holmes<sup>1</sup>, John H. Watson<sup>2</sup>]
 .institution[<sup>1</sup>Baker Street Research, <sup>2</sup>Edinburgh University]
 <br/><br/>
-.date[October 28, 2022]<br/>
+.date[Nov 22, 2022]<br/>
 <br/><br/>
 .note[Created with [{Liminal}](https://github.com/jonathanlilly/liminal) using [{Remark.js}](http://remarkjs.com/) + [{Markdown}](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet) +  [{KaTeX}](https://katex.org)]
 
@@ -181,11 +181,7 @@ class: left
 
 ---
 class: middle, center
-#  That's All!
-
-For other cool stuff, check out my [{website}](http://www.jmlilly.net).
-
-Have fun!
+#  the end
 
     </textarea>
     <script src="./javascript/remark-latest.min.js" type="text/javascript"></script>
